--- a/src/components/TextField/__stories__/TextField.stories.mdx
+++ b/src/components/TextField/__stories__/TextField.stories.mdx
@@ -142,7 +142,7 @@ Use validation to give feedback to the user for a case where he has provided an 
       positive: {
         component: (
           <div className="monday-storybook-text-field_size">
-            <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
+            <TextField title="Email" placeholder="email@maxui.org" size={TextField.sizes.MEDIUM} />
           </div>
         ),
         description:
@@ -153,7 +153,7 @@ Use validation to give feedback to the user for a case where he has provided an 
           <div className="monday-storybook-text-field_size">
             <TextField
               title="What is your email address?"
-              placeholder="email@monday.com"
+              placeholder="email@maxui.org"
               size={TextField.sizes.MEDIUM}
             />
           </div>
@@ -166,7 +166,7 @@ Use validation to give feedback to the user for a case where he has provided an 
       positive: {
         component: (
           <div className="monday-storybook-text-field_size">
-            <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
+            <TextField title="Email" placeholder="email@maxui.org" size={TextField.sizes.MEDIUM} />
           </div>
         ),
         description:
@@ -175,8 +175,8 @@ Use validation to give feedback to the user for a case where he has provided an 
       negative: {
         component: (
           <div className="monday-storybook-text-field_size">
-            <TextField title="Email" placeholder="email@monday.com" size={TextField.sizes.MEDIUM} />
-            For example: email@monday.com
+            <TextField title="Email" placeholder="email@maxui.org" size={TextField.sizes.MEDIUM} />
+            For example: email@maxui.org
           </div>
         ),
         description:
@@ -198,7 +198,7 @@ Users can insert text.
       <h1>Dark Mode Feedback From</h1>
       <div className="monday-storybook-text-field_box_wrapper">
         <TextField title="Your Name" size={TextField.sizes.MEDIUM} placeholder="John Doe" />
-        <TextField title="Email" size={TextField.sizes.MEDIUM} placeholder="email@monday.com" />
+        <TextField title="Email" size={TextField.sizes.MEDIUM} placeholder="email@maxui.org" />
       </div>
     </div>
   </Story>
