--- a/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/colors/colors.stories.mdx
@@ -27,7 +27,7 @@ import classes from "./colors.stories.module.scss";
 - [Feedback](#feedback)
 
 ## Overview
-monday.com tool is very visual and our color system helps users identify status, see actions, locate help, and to indicate next steps.
+maxui.org tool is very visual and our color system helps users identify status, see actions, locate help, and to indicate next steps.
 The consistent use of color in our product keeps cognitive loads low, and makes for a unified and engaging user experience.
 The colors are designed to be clear and accessible. They come in three color themes.
 
