--- a/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.mdx
@@ -160,7 +160,7 @@ There are five types of attention boxes: Primary, success, danger, warning and d
           className="monday-storybook-attention-box--fixed-width"
         >
           <Flex style={{ width: "100%" }} justify={Flex.justify.SPACE_BETWEEN} gap={Flex.gaps.XS}>
-            Get your monday.com notifications
+            Get your maxui.org notifications
             <AttentionBoxLink href="" text="Learn more" />
           </Flex>
         </AttentionBox>
@@ -224,7 +224,7 @@ There are five types of attention boxes: Primary, success, danger, warning and d
             <span className="monday-storybook-attention-box_text">Catch up on updates from all your boards.</span>
             <AttentionBox className="monday-storybook-attention-box_att-box" compact icon={Info}>
               <Flex style={{ width: "100%" }} justify={Flex.justify.SPACE_BETWEEN}>
-                Get your monday.com notifications <AttentionBoxLink href="" text="Learn more" />
+                Get your maxui.org notifications <AttentionBoxLink href="" text="Learn more" />
               </Flex>
             </AttentionBox>
           </div>
