--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -60,11 +60,11 @@ Heading components are used for titles at the top of pages and sub-sections.
 ## Import
 
 The Heading component has been introduced in version 2.0 of Vibe.
-However, the import statement `{Heading}` from 'monday-ui-react-core' is already reserved for the <Link href="/?path=/docs/text-legacyheading--overview">LegacyHeading</Link> component.
+However, the import statement `{Heading}` from 'core' is already reserved for the <Link href="/?path=/docs/text-legacyheading--overview">LegacyHeading</Link> component.
 Therefore, the new Heading with the updated API can be accessed using the following import statement:
 
 ```javascript
-import { Heading } from "monday-ui-react-core/next";
+import { Heading } from "core/next";
 ```
 
 In the upcoming major release of Vibe packages (3.0), we will remove LegacyHeading from the main entry, and then you will be able to import this Heading component
