--- a/src/components/Icon/__stories__/Icon.stories.mdx
+++ b/src/components/Icon/__stories__/Icon.stories.mdx
@@ -77,7 +77,7 @@ Icon component is our component to unify the supported icon types (Vibe Icons, F
   <Story name="Custom SVG">
     <Icon
       iconType={Icon.type.SRC}
-      icon="https://cdn.monday.com/images/apps/custom-icons/Form.svg"
+      icon="https://cdn.maxui.org/images/apps/custom-icons/Form.svg"
       iconLabel="my src awesome icon"
       className="icon-story-custom-icon"
       useCurrentColor
@@ -101,10 +101,10 @@ As a default the icon will inherit the color of it's parent container
 
 ## Icons List
 
-Icons are exported by name from `monday-ui-react-core/icons`:
+Icons are exported by name from `core/icons`:
 
 ```javascript
-import { DoubleCheck } from "monday-ui-react-core/icons";
+import { DoubleCheck } from "core/icons";
 ```
 
 <Canvas>
