--- a/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/welcome/welcome.stories.mdx
@@ -24,16 +24,16 @@ Our design principles were developed based on best practices to ensure top-notch
 
 ## Resources
 
-- [Figma](https://www.figma.com/file/pTpO3Wobs5cQwRsabt21Nd/monday.com-UI-kit?node-id=14811%3A20455)
-- [Github](https://github.com/mondaycom/monday-ui-react-core/)
-- [Animation style guide](https://monday.com/lp/motion/)
+- [Figma](https://www.figma.com/file/pTpO3Wobs5cQwRsabt21Nd/maxui.org-UI-kit?node-id=14811%3A20455)
+- [Github](https://github.com/maxui-org/core/)
+- [Animation style guide](https://maxui.org/lp/motion/)
 
 ## Contributors
 
-monday.com’s designers, developers, and writers provide teams with universal assets—elements, components, patterns, and code—and the guidance on how to design and build with them.
-We welcome contributions to monday.com design system!
+maxui.org’s designers, developers, and writers provide teams with universal assets—elements, components, patterns, and code—and the guidance on how to design and build with them.
+We welcome contributions to maxui.org design system!
 
-Read our<Link href="https://github.com/mondaycom/monday-ui-react-core/blob/master/CONTRIBUTING.md">contribution guide</Link>and help us build and improve our components.
+Read our<Link href="https://github.com/maxui-org/core/blob/master/CONTRIBUTING.md">contribution guide</Link>and help us build and improve our components.
 
 ### Meet the Vibe team
 
